--- a/SDAController/src/main/resources/bootstrap.properties
+++ b/SDAController/src/main/resources/bootstrap.properties
@@ -1,4 +1,5 @@
 #this should correspond to the filename in repo
-spring.application.name=sda
+#spring.application.name=testFile
+spring.application.name=sda-app
 # N.B. this is the default:
-spring.cloud.config.uri=http://localhost:8181
+spring.cloud.config.uri=http://localhost:8182
