--- a/SDAController/pom.xml
+++ b/SDAController/pom.xml
@@ -19,6 +19,8 @@
 		<spring-cloud.version>Hoxton.SR8</spring-cloud.version>
 		<lombok-version>1.18.12</lombok-version>
 		<commons-io-version>2.6</commons-io-version>
+		<aspectj-version>1.9.6</aspectj-version>
+		<aspectj-weaver-version>1.9.6</aspectj-weaver-version>
 	</properties>
 
 	<dependencies>
@@ -45,7 +47,16 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-config</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjrt</artifactId>
+			<version>${aspectj-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+			<version>${aspectj-weaver-version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
