--- a/ConfigService/pom.xml
+++ b/ConfigService/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>ConfigService</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>ConfigService</name>
-	<description>Service offering offering coud config access</description>
+	<description>Service offering offering cloud config access</description>
 
 	<properties>
 		<java.version>1.8</java.version>
