--- a/SDAController/pom.xml
+++ b/SDAController/pom.xml
@@ -21,9 +21,15 @@
 		<commons-io-version>2.6</commons-io-version>
 		<aspectj-version>1.9.6</aspectj-version>
 		<aspectj-weaver-version>1.9.6</aspectj-weaver-version>
+		<hibernate-validator-version>6.0.10.Final</hibernate-validator-version>
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>${hibernate-validator-version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-mongodb</artifactId>
