--- a/SDAController/pom.xml
+++ b/SDAController/pom.xml
@@ -22,9 +22,19 @@
 		<aspectj-version>1.9.6</aspectj-version>
 		<aspectj-weaver-version>1.9.6</aspectj-weaver-version>
 		<hibernate-validator-version>6.0.10.Final</hibernate-validator-version>
+		<open-csv-version>5.0</open-csv-version>
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.opencsv</groupId>
+			<artifactId>opencsv</artifactId>
+			<version>${open-csv-version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.hibernate.validator</groupId>
 			<artifactId>hibernate-validator</artifactId>
