Added dependencies to create docker image Added dockerfile Updated version to 1.0.0-SNAPSHOT

--- a/ConfigService/pom.xml
+++ b/ConfigService/pom.xml
@@ -9,20 +9,27 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.md.configurationService</groupId>
-	<artifactId>ConfigService</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>ConfigService</name>
+	<artifactId>sdaconfigservice</artifactId>
+	<version>1.0.0-SNAPSHOT</version>
+	<name>configservice</name>
 	<description>Service offering offering cloud config access</description>
 
 	<properties>
 		<java.version>1.8</java.version>
 		<spring-cloud.version>Hoxton.SR8</spring-cloud.version>
+		<dockerfile-maven-plugin-version>1.4.12</dockerfile-maven-plugin-version>
+		<docker.image.prefix>sda</docker.image.prefix>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-config-server</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
 		<dependency>
@@ -56,6 +63,18 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>com.spotify</groupId>
+				<artifactId>dockerfile-maven-plugin</artifactId>
+				<version>${dockerfile-maven-plugin-version}</version>
+				<configuration>
+					<repository>${docker.image.prefix}/${project.artifactId}</repository>
+					<buildArgs>
+						<JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
+					</buildArgs>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 
