--- a/SDAController/pom.xml
+++ b/SDAController/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.md.sda</groupId>
-	<artifactId>SDAController</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>SDAController</name>
+	<artifactId>sdacontroller</artifactId>
+	<version>1.0.0-SNAPSHOT</version>
+	<name>controller</name>
 	<description>Client offering rest services and reads from a cloud server</description>
 
 	<properties>
@@ -23,6 +23,8 @@
 		<aspectj-weaver-version>1.9.6</aspectj-weaver-version>
 		<hibernate-validator-version>6.0.10.Final</hibernate-validator-version>
 		<open-csv-version>5.0</open-csv-version>
+		<dockerfile-maven-plugin-version>1.4.12</dockerfile-maven-plugin-version>
+		<docker.image.prefix>sda</docker.image.prefix>
 	</properties>
 
 	<dependencies>
@@ -107,6 +109,17 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>com.spotify</groupId>
+				<artifactId>dockerfile-maven-plugin</artifactId>
+				<version>${dockerfile-maven-plugin-version}</version>
+				<configuration>
+					<repository>${docker.image.prefix}/${project.artifactId}</repository>
+					<buildArgs>
+						<JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
+					</buildArgs>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
