--- a/SDAController/src/main/resources/bootstrap.properties
+++ b/SDAController/src/main/resources/bootstrap.properties
@@ -1,4 +1,6 @@
+
+
 #this should correspond to the filename in repo
 spring.application.name=sda-app
 # N.B. this is the default:
-spring.cloud.config.uri=http://localhost:8182
+spring.cloud.config.uri=http://host.docker.internal:8182
