--- a/deploymentsManagementAPI/dockerfile
+++ b/deploymentsManagementAPI/dockerfile
@@ -1,9 +1,9 @@
 FROM amazoncorretto:11.0.4
 VOLUME /tmp
 
-RUN mkdir /depExports
+#RUN mkdir /depExports
 
 ARG JAR_FILE
 COPY ${JAR_FILE} deploymentsmanagementcontroller.jar
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom", "-jar", "-DmongoDBURL=mongodb://host.docker.internal:27016", "/deploymentsmanagementcontroller.jar"]
-#run docker file using:  docker run -p 8080:8080 -t depmgr/deploymentsmanagementcontroller
+#run docker file using: docker run --name=deploymentsController -d -p 8080:8080 -it --mount src="/c/depExports",dst=/depExports,type=bind depmgr/deploymentsmanagementcontroller:latest
