Replaced POC classes WebSecurityConfig.java and AuthenticationFilter.java with GO common REST Auth and disabled out of the box security Cleanup pom.xml Updated dockerfile Added some unit tests

--- a/deploymentsManagementAPI/dockerfile
+++ b/deploymentsManagementAPI/dockerfile
@@ -1,7 +1,8 @@
 FROM amazoncorretto:11.0.4
 VOLUME /tmp
 
-#RUN mkdir /depExports
+RUN mkdir /config
+COPY config/security.properties /config/security.properties
 
 ARG JAR_FILE
 COPY ${JAR_FILE} deploymentsmanagementcontroller.jar
