Added tag version to use for cloud config

--- a/deploymentsManagementAPI/src/main/resources/bootstrap.properties
+++ b/deploymentsManagementAPI/src/main/resources/bootstrap.properties
@@ -1,4 +1,4 @@
 #this should correspond to the filename in repo
 spring.application.name=deployments-management-config
-# N.B. this is the default:
 spring.cloud.config.uri=http://host.docker.internal:8182
+spring.cloud.config.label=1.1-dev01
