--- a/deploymentsManagementAPI/src/main/resources/bootstrap.properties
+++ b/deploymentsManagementAPI/src/main/resources/bootstrap.properties
@@ -2,3 +2,7 @@
 spring.application.name=deployments-management-config
 spring.cloud.config.uri=http://host.docker.internal:8182
 spring.cloud.config.label=1.1-dev01
+
+log.file.path=./logs/
+log.file.name=deployments-management.log
+log.file.max-history=2
