--- a/deploymentsManagementAPI/pom.xml
+++ b/deploymentsManagementAPI/pom.xml
@@ -121,6 +121,12 @@
 			<artifactId>com.springsource.javax.xml.ws</artifactId>
 			<version>2.1.1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>mt.com.go</groupId>
+			<artifactId>logging-common</artifactId>
+			<version>1.5.0</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
